--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Computer Scientist</p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineer</p>
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Melbourne, Australia</p>
             <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>jigar.thakkar003@gmail.com</p>
             <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>0406101797</p>
@@ -174,8 +174,8 @@
       <div class="w3-quarter">
         <div class="w3-white w3-text-grey w3-card-4">
           <div class="w3-display-container">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-certificate fa-fw  w3-xlarge w3-text-teal icon ion ion-social-apple"></i>IOS Application</h2>
+            <h3 class="w3-text-grey w3-padding-16">
+              <i class="fa fa-certificate fa-fw  w3-xlarge w3-text-teal icon ion ion-social-apple"></i>IOS Application</h3>
               <hr>
               <h5 align="center"> Restaurant Application</h5>
             <img src="all.gif" style="width:100%" alt="Avatar">
@@ -186,8 +186,8 @@
       <div class="w3-quarter">
         <div class="w3-white w3-text-grey w3-card-4">
           <div class="w3-display-container">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-certificate fa-fw  w3-xlarge w3-text-teal icon ion ion-social-apple"></i>IOS Application</h2>
+            <h3 class="w3-text-grey w3-padding-16">
+              <i class="fa fa-certificate fa-fw  w3-xlarge w3-text-teal icon ion ion-social-apple"></i>IOS Application</h3>
               <hr>
               <h5 align="center">Local Business Directory</h5>
             <img src="Bluepages.gif" style="width:100%" alt="Avatar">
@@ -198,24 +198,24 @@
       <div class="w3-quarter">
         <div class="w3-white w3-text-grey w3-card-4">
           <div class="w3-display-container">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-certificate fa-fw  w3-xlarge w3-text-teal icon ion ion-social-apple"></i>IOS Application</h2>
+            <h3 class="w3-text-grey w3-padding-16">
+              <i class="fa fa-certificate fa-fw  w3-xlarge w3-text-teal icon ion ion-android-cloud"></i>Cloud Computing</h3>
               <hr>
-              <h5 align="center">Local Business Directory</h5>
-            <img src="Bluepages.gif" style="width:100%" alt="Avatar">
-             <p class="w3-around">Online local Business Directory like yellow pages, find out more at <a class="w3-text-teal" href="https://github.com/jigar007/OnlineLocalBusinessDirectory" target="_blank">GitHub</a></p>
+              <h5 align="center">Twitter Analysis</h5>
+                <iframe src="https://www.youtube.com/embed/JfFLWD-UyXQ" style="width:100%" frameborder="0" gesture="media" allowfullscreen></iframe>
+             <p class="w3-around"> Twata analysis in Australia region using Nectar Cloud, HPC tools like OpenMPI, MEAN stack, BOTO, Ansible and Sentiment Analysis  <a class="w3-text-teal" href="https://github.com/jigar007/TwitterAnalysis" target="_blank">GitHub</a></p>
           </div>
         </div>
       </div>
       <div class="w3-quarter">
         <div class="w3-white w3-text-grey w3-card-4">
           <div class="w3-display-container">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-certificate fa-fw  w3-xlarge w3-text-teal icon ion ion-social-apple"></i>Android Application</h2>
+            <h3 class="w3-text-grey w3-padding-16">
+              <i class="fa fa-certificate fa-fw  w3-xlarge w3-text-teal icon ion ion-social-android"></i>Android Application</h3>
               <hr>
-              <h5 align="center">Local Business Directory</h5>
-            <img src="Bluepages.gif" style="width:100%" alt="Avatar">
-             <p class="w3-around">Online local Business Directory like yellow pages, find out more at <a class="w3-text-teal" href="https://github.com/jigar007/OnlineLocalBusinessDirectory" target="_blank">GitHub</a></p>
+              <h5 align="center">Safe Drive System</h5>
+            <img src="6.png" style="width:100%" alt="Avatar">
+             <p class="w3-around">This is an implementation of an Android application which can be used to make driving safe using various techniques which include shock detection and real-time dozing off monitoring. <a class="w3-text-teal" href="https://github.com/jigar007/OnlineLocalBusinessDirectory" target="_blank">GitHub</a></p>
           </div>
         </div>
       </div>
