--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@ enthusiastic team player dedicated to streamlining processes and good at finding
               </a>
             </li>
           </ul>
+          <a href="resumejigar.pdf">
+          <button type="button" style="margin-top: 50px; border-radius: 0px;"  class="btn btn-danger">Download Full Resume</button>
+          </a>
         </div>
       </section>
 
