--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
           <h1 class="mb-0">Jigar
             <span class="text-primary">Thakkar</span>
           </h1>
-          <div class="subheading mb-5">Melbourne · Australia · +61 406 101 797  ·
-            <a class="text-primary" href="mailto:jigar.thakkar003@gmail.com">jigar.thakkar003@gmail.com</a>
+          <div class="subheading mb-5"> Australia · +61 406 101 797  ·
+            <a class="text-primary" href="mailto:csjigar007@gmail.com">csjigar007@gmail.com</a>
           </div>
           <p class="mb-5">A curious, diligent and result-driven Software Engineer with extensive experiences at a Startups in Agile SDLC
 model including requirements definition, prototyping, interface implementation, and testing. Supportive and
