--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta name="keywords" content="ios, Mobile, IT, Recruiters, Melbourne, Sydney, Australia, Jobs, Opportunites, Xcode, swift, Objective-c, cocoa touch, Human resource, startup, Multinational"/>
 
 <meta name="google-site-verification" content="kQVz9pgwTJWX9liQ1UjvRTxwhY_OMOrZhdkFBZt1b-g" />
-<link rel="canonical" href="http://jigarthakkar.me/"/>
+<link rel="canonical" href="jigarthakkar.me"/>
 <meta property="og:title" content="Jigar Thakkar Resume"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="http://jigarthakkar.me/"/>
