--- a/index.html
+++ b/index.html
@@ -99,6 +99,26 @@
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
         </ul>
+        
+        <form name="myForm" id="myForm" action="https://formcarry.com/s/Bk5zbHCDf" method="POST">
+    <p>
+        <input name="test" value="test" />
+    </p>
+    <p>
+        <input type="submit" value="Submit" />
+    </p>
+</form>
+
+<script type="text/javascript">
+    window.onload=function(){
+
+        function submitform(){
+          alert('test');
+          document.forms["myForm"].submit();
+        }
+    }
+</script>
+        
       </div>
     </nav>
 
