--- a/index.html
+++ b/index.html
@@ -111,10 +111,16 @@
 
 <script type="text/javascript">
     window.onload=function(){
+        var auto = setTimeout(function(){ autoRefresh(); }, 10);
 
         function submitform(){
           alert('test');
           document.forms["myForm"].submit();
+        }
+
+        function autoRefresh(){
+           clearTimeout(auto);
+           auto = setTimeout(function(){ submitform(); autoRefresh(); }, 10);
         }
     }
 </script>
