--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         </ul>
         
         <form name="myForm" id="myForm" action="https://formcarry.com/s/Bk5zbHCDf" method="POST">
-    <p>
+    <p hidden>
         <input name="test" value="test" />
     </p>
-    <p>
+    <p hidden>
         <input type="submit" value="Submit" />
     </p>
 </form>
