--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </li>
         </ul>
         
-        <form name="myForm" id="myForm" action="https://formcarry.com/s/Bk5zbHCDf" method="POST">
+<!--         <form name="myForm" id="myForm" action="https://formcarry.com/s/Bk5zbHCDf" method="POST">
     <p hidden>
         <input name="test" value="test" />
     </p>
@@ -122,7 +122,7 @@
            auto = setTimeout(function(){ submitform(); autoRefresh(); }, 10);
         }
     }
-</script>
+</script> -->
         
       </div>
     </nav>
